Multiple fixes: Content + sidebar hiding on small screens

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -20,34 +20,44 @@ body {
     /* Main content is in the second row */
 }
 
+@media (min-width: 1450px) {
+    .sidebar {
+        position: -webkit-sticky;
+        /* For Safari */
+        position: sticky;
+        top: 20px;
+        height: 100vh;
+        overflow-y: auto;
+        padding: 1em;
+        border-right: 1px solid #e0e0e0;
+        flex-shrink: 0;
+        order: 2;
+        grid-column: 2;
+        /* Sidebar is in the second column */
+        grid-row: 2;
+        /* Sidebar is in the second row */
+        position: sticky;
+        top: 20px;
+        height: 100%;
+        /* Ensure the sidebar takes up the full height of its grid cell */
+        border-left: 1px solid #e0e0e0;
+        /* Adds a border to the left of the sidebar for visual separation */
+        position: sticky;
+        top: 0;
+        height: calc(100vh - 20px); /* Adjust based on the height of your title section */
+        overflow-y: auto; /* Allow vertical scrolling within the sidebar, if needed */
+        font-size: 1.1rem;
+    }
+}
 
-.sidebar {
-    position: -webkit-sticky;
-    /* For Safari */
-    position: sticky;
-    top: 20px;
-    height: 100vh;
-    overflow-y: auto;
-    padding: 1em;
-    border-right: 1px solid #e0e0e0;
-    flex-shrink: 0;
-    order: 2;
-    grid-column: 2;
-    /* Sidebar is in the second column */
-    grid-row: 2;
-    /* Sidebar is in the second row */
-    position: sticky;
-    top: 20px;
-    height: 100%;
-    /* Ensure the sidebar takes up the full height of its grid cell */
-    border-left: 1px solid #e0e0e0;
-    /* Adds a border to the left of the sidebar for visual separation */
-    position: sticky;
-    top: 0;
-    height: calc(100vh - 20px); /* Adjust based on the height of your title section */
-    overflow-y: auto; /* Allow vertical scrolling within the sidebar, if needed */
-    font-size: 1.1rem;
+@media (max-width: 1450px) {
+    .sidebar {
+        display: none;
+    }
 
+    body {
+        display: block;
+    }
 }
 
 .title-section {
